Urls_menu_icons

--- a/static/Authentication/css/login.css
+++ b/static/Authentication/css/login.css
@@ -12,7 +12,7 @@ html, body {
 
 .login-body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f9fafb;
+  background-color: #fbf9fa;
   display: flex;
   justify-content: center;
   align-items: center;
