--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{% static 'Authentication/css/login.css' %}" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="{% static 'Authentication/favicon.ico' %}">
 
   <style>
     body {
